force-app/main/default/objects/Festival__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Number of attendees possible</description>
    <externalId>true</externalId>
    <inlineHelpText>Maximum capacity of venue.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>