force-app/main/default/objects/Festival__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Day the festival ends.</description>
    <inlineHelpText>Displays Festival end date.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>