force-app/main/default/objects/Festival__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>A date/time field to display when the festival starts.</description>
    <inlineHelpText>This field should populate when the festival is set to start.</inlineHelpText>
    <label>Event Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>